@@ -3,7 +3,7 @@
 ;; Author:  TSUCHIYA Masatoshi <tsuchiya@pine.kuee.kyoto-u.ac.jp>,
 ;;          Yuuichi Teranishi <teranisi@quickhack.net>
 ;; Created: 2000/06/13
-;; Revised: $Date: 2000/12/15 02:30:59 $
+;; Revised: $Date: 2004/05/01 17:14:28 $
 
 ;;; Commentary:
 
@@ -79,7 +79,7 @@
     ("mhc-mew"      . (and (locate-library "mew") make-mhc/with-mew))
     ("mhc-wl"       . (and (locate-library "wl") make-mhc/with-wl))
     ("mhc-gnus"     . (and (locate-library "gnus") make-mhc/with-gnus))
-    ("mhc-mime"     . (or (and (locate-library "gnus") make-mhc/with-gnus)
+    ("mhc-mime"     . (or (and (locate-library "gnus") (locate-library "mime-edit") make-mhc/with-gnus)
 			  (and (locate-library "wl") make-mhc/with-wl)))
     ("nnmhc"        . (and (locate-library "gnus") make-mhc/with-gnus))
     ))
